--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/applicatie-analyse.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/applicatie-analyse.component.html
@@ -1,3 +1,4 @@
+<body class="body"> 
 <div class="content">
 <h1>Applicatie </h1>
 <p>In dit document zal de algemene beschrijving staan rondom beveiliging.  </p>
@@ -774,3 +775,4 @@ Functionaliteiten <br>
     <p>Niet alle data is persoonlijke data maar een gedeelte ervan wel. Dit houdt in dat alle persoonlijke data alleen maag worden opgeslagen als dat het absoluut nodig is en dat het daarnaast volgend de GDPR wet moet worden voldaan  </p>
 
 </div>
+</body>
