--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/document.css
@@ -1,4 +1,11 @@
+
+
+.body {
+    background: #252525;
+}
+
 .content p {
+    color: #b3b3b3;
 }
 
 .content table {
@@ -9,6 +16,7 @@
 
 .content table td {
     text-align: left;
+    color: #b3b3b3;
     border: 1pt solid #b3b3b3;
 }
 
