--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
@@ -1,6 +1,7 @@
-.content {
-}
 
+.body {
+    background: #252525;
+}
 .content table {
     width: 100%;
     margin: 30px 0;
@@ -29,6 +30,7 @@
     margin: 12.0pt 0 0;
     line-height: 107%;
     font-size: 1em;
+    color: white;
     font-family: K2D, Halvetica, Arial, sans-serif;
    
     
