--- a/Portfolio/portfolio/src/app/document.css
+++ b/Portfolio/portfolio/src/app/document.css
@@ -1,17 +1,22 @@
+.body{
+    background: #252525;
+   width: 100%;
+   margin: 0px;
+}
 .content {
 }
 
 .content p {
-    margin: 12.0pt 0 0;
+    /* margin: 12.0pt 0 0; */
     line-height: 107%;
     font-size: 1em;
     font-family: K2D, Halvetica, Arial, sans-serif;
-   
+    color: #b3b3b3;
     
 }
 .content table {
     width: 100%;
-    margin: 30px 0;
+    padding: 30px 0;
     table-layout: fixed;
 }
 
@@ -25,7 +30,7 @@
 /*}*/
 
 .content h1 {
-    margin: 12.0pt 0 0;
+    /* margin: 12.0pt 0 0; */
     line-height: 107%;
     font-size: 2em;
     font-family: K2D, Halvetica, Arial, sans-serif;
@@ -34,7 +39,7 @@
 
 }
 .content h2 {
-    margin: 12.0pt 0 0;
+    /* margin: 12.0pt 0 0; */
     line-height: 107%;
     font-size: 1.5em;
     font-family: K2D, Halvetica, Arial, sans-serif;
