--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/analyse_aplicatie/document.css
@@ -8,9 +8,14 @@
     color: #b3b3b3;
 }
 
+.relax{
+    margin: 0px;
+    padding: 0px;
+}
+
 .content table {
     width: 100%;
-    margin: 30px 0;
+    margin: 0px 0;
     table-layout: fixed;
 }
 
