--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
@@ -1,7 +1,13 @@
 
+
 .body {
     background: #252525;
 }
+
+.content p {
+    color: #b3b3b3;
+}
+
 .content table {
     width: 100%;
     margin: 30px 0;
@@ -10,6 +16,7 @@
 
 .content table td {
     text-align: left;
+    color: #b3b3b3;
     border: 1pt solid #b3b3b3;
 }
 
@@ -26,24 +33,14 @@
     font-weight: 300;
 
 }
+
 .content p {
     margin: 12.0pt 0 0;
     line-height: 107%;
     font-size: 1em;
-    color: white;
     font-family: K2D, Halvetica, Arial, sans-serif;
    
     
-}
-
-.content h2 {
-    margin: 12.0pt 0 0;
-    line-height: 107%;
-    font-size: 1em;
-    font-family: K2D, Halvetica, Arial, sans-serif;
-    color: #b3b3b3;
-    font-weight: 300;
-
 }
 
 @media screen and (max-width:789px) {
