--- a/Portfolio/portfolio/src/app/analyse_security_engineer/redvsblue2/redvsblue2.component.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/redvsblue2/redvsblue2.component.css
@@ -1,12 +1,12 @@
 .body{
     background: #252525;
    width: 100%;
+   height: 900px;
    margin: 0px;
 }
 .content {
+    margin: 0px;
 }
-
-
 
 .content p {
     /* margin: 12.0pt 0 0; */
@@ -20,7 +20,6 @@
     width: 100%;
     padding: 30px 0;
     table-layout: fixed;
-    color: #b3b3b3;
 }
 
 .content table td {
