--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -58,6 +58,17 @@
 					</div>
 				</div>
 			</a>
+			<a routerLink="/redblue2" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						red vs blue evenement 2
+					</div>
+					<div class="project_description">
+						conclusie van het evenement
+					</div>
+				</div>
+			</a>
 
 			<a routerLink="/personalresearch" routerLinkActive="active">
 				<div class="project float">
