--- a/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
+++ b/Portfolio/portfolio/src/app/personalanalyse/personalanalyse.component.html
@@ -80,7 +80,7 @@
 					</div>
 				</div>
             </a>
-
+			
 			<a routerLink="/rsa" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
@@ -90,6 +90,16 @@
 					<div class="project_description">
 						Calculatie van RSA.
 					</div>
+				</div>
+			</a>
+			<a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Static Code Review
+					</div>
+					<div class="project_description">
+						Static code review van het individueele project.					</div>
 				</div>
 			</a>
 			
