--- a/Portfolio/portfolio/src/app/main-page/main-page.component.html
+++ b/Portfolio/portfolio/src/app/main-page/main-page.component.html
@@ -15,7 +15,18 @@
 			Mijn naam is Roel Lucassen en welkom bij mijn portfolio van semester 6.
 		</p>
 		<div class="projects">
-		        
+			
+			<a routerLink="/leerplanning" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="leerplan">
+					<div class="project_title">
+						leerplan
+					</div>
+					<div class="project_description">
+						In dit leerplan staat de planning en de doelen die ik dit semester wil bereiken.
+					</div>
+				</div>
+            </a>
             <a routerLink="/secureportfolio" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/cybersecurity.png" alt="security_Engineering">
@@ -36,6 +47,17 @@
 					</div>
 					<div class="project_description">
 						Hier ga je naar een pagina waar alle informatie en onderzoeken staan die te maken heeft met Cyber Engineering.
+					</div>
+				</div>
+			</a>
+			<a href="https://docs.google.com/document/d/10nXgjhcRVJdaAqNqA_9dcfV2Cl0BpN6LDJVNqV57IsY/edit?usp=sharing" >
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/cybersecurity.png" alt="security_Engineering">
+					<div class="project_title">
+						Symposium
+					</div>
+					<div class="project_description">
+					Het Symposium van het R&D project
 					</div>
 				</div>
 			</a>
