--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/security-principles/security-principles.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/security-principles/security-principles.component.html
@@ -1,8 +1,9 @@
+<body class="body" style="margin: 0px;">
 <div class="content"> 
     <h1>Inleiding</h1>
     <p>In dit document worden de security principles en de CIA uitgelegd met voorbeelden. Hiernaast zullen er ook een paar Security Best Practices worden beschreven.</p>
 
-<h2> <b>Step by step approach </b></h2>
+<h2><b> Step by step approach </b> </h2>
 <p>Stap 1. Analyseer je project voordat je begint. Ga kijken wie jou applicatie zou willen aanvallen en waarom. Kijk daarna hoe je dit kan gaan stoppen. Ook moet je gaan kijken naar wat je kan gaan beveiligen. Schrijf dit op in een document zodat je dit makkelijk terug kan zien. Andere belangrijke analyses zijn:CIA
    , Risk analysis,
     Privacy Impact assessment (PIA),
@@ -65,3 +66,4 @@
         <p>Hackers verbeteren hun vak voortdurend, wat betekent dat informatiebeveiliging moet evolueren om bij te blijven. IT-professionals voeren tests uit, voeren risicobeoordelingen uit, herlezen het noodherstelplan, controleren het bedrijfscontinuïteitsplan in geval van een aanval en doen het dan helemaal opnieuw</p>
 
 </div>
+</body>
