--- a/Portfolio/portfolio/src/app/analyse_security_engineer/fuzzy-testing/fuzzy-testing.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/fuzzy-testing/fuzzy-testing.component.html
@@ -1,3 +1,4 @@
+<body class="body" style=" margin: 0px;"> 
 <div class="content">
     <h2>Inleiding</h2>
     <p>Dit document beschrijft wat fuzz testing is, waarom het wordt gebruikt en hoe je het kan toepassen. Er zullen ook een paar voorbeelden worden gegeven.</p>
@@ -10,21 +11,22 @@
 
     <h2>Waarom zou je fuzz testing gebruiken</h2>
     <ul>
-        <li>Vaak vindt Fuzzy-testen de grote beveiligingsfouten of defecten. </li>
-        <li>Fuzz-testen geven een effectiever resultaat bij gebruik met Black Box Testing, Beta Testing en andere methoden voor foutopsporing. </li>
-        <li>Vaak vindt Fuzzy-testen de grote beveiligingsfouten of defecten. </li>
-        <li>Fuzz-testen is een van de black box-testtechnieken. Fuzzing is een van de meest gebruikte methoden die hackers gebruiken om de kwetsbaarheid van het systeem te vinden.</li>
+        <li><p>Vaak vindt Fuzzy-testen de grote beveiligingsfouten of defecten.</p> </li>
+        <li><p>Fuzz-testen geven een effectiever resultaat bij gebruik met Black Box Testing, Beta Testing en andere methoden voor foutopsporing.</p> </li>
+        <li><p>Vaak vindt Fuzzy-testen de grote beveiligingsfouten of defecten. </p></li>
+        <li><p>Fuzz-testen is een van de black box-testtechnieken. 
+            Fuzzing is een van de meest gebruikte methoden die hackers gebruiken om de kwetsbaarheid van het systeem te vinden.</p></li>
     </ul>
     
 
     <h2>Hoe fuzz test je</h2>
     <ol>
-        <li>Identify the target system</li>
-        <li>Identify inputs</li>
-        <li>Generate Fuzzed data</li>
-        <li>Execute the test using fuzzy data</li>
-        <li>Monitor system behavior</li>
-        <li>Log defects</li>
+        <li><p>Identify the target system</p></li>
+        <li><p>Identify inputs</p></li>
+        <li><p>Generate Fuzzed data</p></li>
+        <li><p>Execute the test using fuzzy data</p></li>
+        <li><p>Monitor system behavior</p></li>
+        <li><p>Log defects</p></li>
     </ol>
     
 
@@ -55,3 +57,4 @@
 
 
 </div>
+</body>
