--- a/Portfolio/portfolio/src/app/analyse_security_engineer/logging/logging.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/logging/logging.component.html
@@ -1,3 +1,4 @@
+<body class="body" style="margin: 0px;">
 <div class="content"> 
 <h1>Inleiding</h1>
 <p>Er zijn meerdere manieren om logging toe te passen in het systeem. Ik zal hier een paar voorbeelden noemen en beschrijven hoe ze werken en waarom ze wel of niet gekozen zijn.</p>
@@ -41,3 +42,4 @@
 
 
 </div>
+</body>
