--- a/Portfolio/portfolio/src/app/analyse_security_engineer/redvsblue/redvsblue.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/redvsblue/redvsblue.component.html
@@ -1,3 +1,4 @@
+<body class="body" style="height: 1000px; margin: 0px;"> 
 <div class="content"> 
 <h2>Applicatie</h2>
 <p>De applicatie had de volgende functies tijdens het eerste evenement: Een gebruiker kon registreren met een email, gebruikersnaam en wachtwoord, een gebruiker kon inloggen als hij een wachtwoord had. Als je ingelogd was kon je als je een admin was alle gebruikers bekijken en verwijderen. De autorizatie werd gedaan doormiddel van JWT tokens. Deze tokens waren gesigned met een RSA 2048 sleutel die random werd gegenereerd. </p>
@@ -13,3 +14,4 @@
 <h2>Conclusie</h2>
 <p>Voor het eerste evenement vind ik dat ik een goede applicatie heb geleverd. Er waren mogelijk iets te weinig features voor de red teamers maar voor de eerste keer vond ik het voldoende. Voor het volgende evenement zou het mogelijk moeten worden om een profiel aan te maken met foto's. hopelijk geeft dit de mogelijkheid voor red teamers om vulnerabilities te vinden.</p>
 </div>
+</body>
