--- a/Portfolio/portfolio/src/app/analyse_security_engineer/xss/xss-analyse.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/xss/xss-analyse.component.html
@@ -1,4 +1,4 @@
-
+<body class="body" style="height: 990px;">
 <div class="content">
 <h1>Inleiding </h1>
 <p>In dit document zal worden beschreven wat ik allemaal heb gebruikt om XSS tegen te gaan.</p>
@@ -13,12 +13,12 @@
     <h1>Implementeren van input validatie</h1>
     <p>Input validatie kan op meerdere manieren worden geimplimenteerd om je systeem te beschermen. Hier zijn een paar voorbeelden:     </p>
         <ul>
-            <li>Data type validators zijn mogelijk in web frameworks</li>
-            <li>Validatie tegen JSON en XML input.</li>
-            <li>Data type conversie. Bijvoorbeeld integer.parseInt() of Double.ToString().</li>
-            <li>Minimum en maximum waardes voor velden zoals datums of lengtes van strings.</li>
-            <li>Array van toegestaande waardes (bijvoorbeeld dagen van een week)</li>
-            <li>Regular expressions voor beschermen of het afdwingen van bepaalde input.</li>
+            <li><p>Data type validators zijn mogelijk in web frameworks</p></li>
+            <li><p>Validatie tegen JSON en XML input.</p></li>
+            <li><p>Data type conversie. Bijvoorbeeld integer.parseInt() of Double.ToString().</p></li>
+            <li><p>Minimum en maximum waardes voor velden zoals datums of lengtes van strings.</p></li>
+            <li><p>Array van toegestaande waardes (bijvoorbeeld dagen van een week)</p></li>
+            <li><p>Regular expressions voor beschermen of het afdwingen van bepaalde input.</p></li>
         </ul>
 
     
@@ -42,3 +42,4 @@
        
         </p>
     </div>
+    </body>
