--- a/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/applicatie-analyse/document.css
@@ -34,6 +34,17 @@
 
 }
 
+
+.content h2 {
+    margin: 12.0pt 0 0;
+    line-height: 107%;
+   
+    font-family: K2D, Halvetica, Arial, sans-serif;
+    color: #b3b3b3;
+    font-weight: 300;
+
+}
+
 .content p {
     margin: 12.0pt 0 0;
     line-height: 107%;
@@ -41,6 +52,10 @@
     font-family: K2D, Halvetica, Arial, sans-serif;
    
     
+}
+
+.content li {
+    color: #b3b3b3;  
 }
 
 @media screen and (max-width:789px) {
