--- a/Portfolio/portfolio/src/app/analyse_security_engineer/logging/logging.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/logging/logging.component.html
@@ -26,7 +26,7 @@
 <h2>spring-jcl</h2>
 <p>Spring-jcl is een package dat automatisch in Springboot starter Web zit. Tijdens het gebruik van Spring-jcl kan hij met een LoggerFactory een Logger-object maken. De LoggerFactory kan gemakkelijk zeggen waar een log moet worden toegevoegd en wat voor soort log niveau het moet zijn (logniveaus: TRACE, DEBUG, INFO, WARN en ERROR).</p>
 <p>Wanneer een thread deze code vindt, zal deze standaard een aangepast bericht in de console plaatsen. Deze instellingen kunnen worden gewijzigd om deze output bijvoorbeeld ook in rollende bestanden te loggen met behulp van Logback, dat ook in het pakket zit. Deze bestanden kunnen worden gescheiden tussen het soort logboekregistratieniveau dat u wilt, de bestandsgrootte en de datum.</p>
-<p>Bealdung (2020, https://www.baeldung.com/spring-boot-logging) geeft een verhaal over hoe loggen in Spring Boot moet gebeuren en Brandon Jones(2018, https://www.youtube.com/watch?v=xJa-UsP9slQ) geeft hetzelfde verhaal. </p>
+<p>Bealdung (2020, <a href="https://www.baeldung.com/spring-boot-logging"> https://www.baeldung.com/spring-boot-logging </a>) geeft een verhaal over hoe loggen in Spring Boot moet gebeuren en Brandon Jones(2018, https://www.youtube.com/watch?v=xJa-UsP9slQ) geeft hetzelfde verhaal. </p>
 <p> <b>praktisch voorbeeld:</b>  </p>
 <img src="../../../assets/img/praktisch_voorbeeld2.PNG">
 <p>Als je zou gaan kijken naar de loggings als je naar de controller gaat zie je het volgende:</p> 
