--- a/Portfolio/portfolio/src/app/main-page/main-page.component.html
+++ b/Portfolio/portfolio/src/app/main-page/main-page.component.html
@@ -16,7 +16,7 @@
 		</p>
 		<div class="projects">
 			
-			<a routerLink="/leerplanning" routerLinkActive="active">
+			<a href="https://docs.google.com/document/d/1-H4MLlG7qq8pxcSmIn4C2A3yDMKnOkcF7TIidjwmYxM/edit?usp=sharing" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="leerplan">
 					<div class="project_title">
