--- a/Portfolio/portfolio/src/app/main-page/main-page.component.html
+++ b/Portfolio/portfolio/src/app/main-page/main-page.component.html
@@ -39,7 +39,7 @@
 				</div>
 			</a>
 
-			<a routerLink="/groupportfolio" routerLinkActive="active">
+			<a routerLink="/rdproject" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/cybersecurity.png" alt="security_Engineering">
 					<div class="project_title">
