--- a/Portfolio/portfolio/src/app/analyse_security_engineer/leerontwikkelingpt1/leerontwikkelingpt1.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/leerontwikkelingpt1/leerontwikkelingpt1.component.html
@@ -1,3 +1,4 @@
+<body class="body"> 
 <div class="content">
     <h2>Reflectie</h2>
     <p>Het verschil tussen wat ik begreep over security bij het begin van de minor en nu is erg groot. Ik heb meer geleerd over hoe je security moet aanpassen en hoe je het moet opzoeken. </p>
@@ -10,5 +11,6 @@
     <p>In verband met communicatie vind ik dat ik het goed doe. Ik hoe regelmatig contact met Stephan Vrijssen. Een puntje dat nog beter kan is dat ik wat vaker contact opneem met Casper om door mijn portfolio door te kijken.</p>
     <p>Al in al ben ik goed bezig maar er zijn nog een paar puntjes waar verbetering in mag komen zoals het documenteren van technische skills en deze in de portfolio zetten</p> 
 
-
+<p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
 </div>
+</body>
