--- a/Portfolio/portfolio/src/app/analyse_security_engineer/security-jobs/security-jobs.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/security-jobs/security-jobs.component.html
@@ -1,3 +1,4 @@
+<body class="body">
 <div class="content">
     <h2>Introductie</h2>
     <p>Dit document beschrijft twee security engineering banen met daarnaast de taken en verantwoordelijkheid ervan. Ook zal er worden beschreven welke learning goals en activiteiten hierdoor zijn aangepast of geüpdatet. </p>
@@ -75,3 +76,4 @@
 
 
 </div>
+</body>
