--- a/Portfolio/portfolio/src/app/leerplanning/leerplanning.component.html
+++ b/Portfolio/portfolio/src/app/leerplanning/leerplanning.component.html
@@ -1,5 +1,173 @@
+<body class="body">
 <div class="content"> 
-    <p class="tekst">In dit document zal je het leerplan van Roel Lucassen zien. Dit leerplan is wat Roel Lucassen wil gaan leren dit semester. Het is mogelijk dat de doelen die hier zijn beschreven en de actuele doelen die Roel Lucassen heeft gedaan kunnen verschillen in verband met deviaties.</p>
-  <p>Link naar de leerplanning:</p>
-  <a href="https://docs.google.com/document/d/1-H4MLlG7qq8pxcSmIn4C2A3yDMKnOkcF7TIidjwmYxM/edit?usp=sharing">Leerplanning</a>
+ 
+  <h1>Leerplanning</h1>
+  <h2>Inleiding</h2>
+  <p>In dit document zal je het leerplan van Roel Lucassen zien. Dit leerplan is wat Roel Lucassen wil gaan leren dit semester. Het is mogelijk dat de doelen die hier zijn beschreven en de actuele doelen die Roel Lucassen heeft gedaan kunnen verschillen in verband met deviaties. </p>
+  <p>De leerplan zal uit twee gedeeltes bestaan:<br>
+    ·         Wie ben ik <br>
+    ·         De doelen
+  </p>
+  <p>De doelen zijn punten die Roel Lucassen wil onderzoeken of ervaring mee wilt opdoen. Deze doelen hebben te maken met security engineering en een groot deel zal advies zijn van Fontys. De doelen zullen worden beschreven doormiddel van een must/should have lijst met daarnaast additionele kopjes met gerelateerde onderwerpen</p>
+  <p>De planning zal bestaan uit een tijdschema waar meerdere doelen in zijn beschreven met daarnaast algemene doelen van Fontys en mogelijke interesses gerelateerd tot security engineering.</p>
+  <h2>Wie ben ik</h2>
+  <p>Mijn naam is Roel Lucassen. Ik ben een derde jaar student aan de Fontys en ik heb gekozen voor security engineering. Ik zat te twijfelen tussen red teaming and security engineering maar dacht toen dat ik security engineering toch wat leuker zou vinden dus heb ik daarvoor gekozen.</p>
+  <p>In de toekomst wil ik iets gaan doen met software bij de politie of het leger. Ik ben nog niet 100% zeker of ik cybersecurity wil doen of software. In ieder geval ben ik meer geïnteresseerd in het voorkomen van cyberleks dan het verdedigen hiertegen.</p>
+  <h2>Doelen</h2>
+  <p>Hieronder staan interesses, onderwerpen en opdrachten waar ik dit semester aan wil gaan werken.</p>
+  
+  <table style="width: 100%;">
+    <tr>
+      <td></td>
+      <td>Taak</td>
+      <td>Afgemaakt</td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>1.</p></td>
+      <td><p>Hoe schrijf je een verslag </p></td>
+      <td><p>Ja, heb Stephans lessen erover gevolgd.</p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>2.</p></td>
+      <td><p>Onderzoek security engineering banen en documenteer</p></td>
+      <td><p><a href="/jobs">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>3.</p></td>
+      <td><p>Het maken van een abuse case van de R&D project</p></td>
+      <td><p><a href="/analyse#misuse">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>4.</p></td>
+      <td><p>Bestudeer en implementeer standaard security principes.</p></td>
+      <td><p><a href="/analyse">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>5.</p></td>
+      <td><p>Leer syntax en de opties van regular expressions en pas deze toe op een test-applicatie.</p></td>
+      <td><p><a href="/implementatie#regularExpressions">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>6.</p></td>
+      <td><p>
+        Voer een AES operatie handmatig uit en rapporteer dit. Zie cryptografie voor meer informatie.
+        </p></td>
+      <td><p>Niet gelukt, kon het niet berekenen.</p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>7.</p></td>
+      <td><p>
+        Implementeer data encryptie op applicatie level code. Documenteer welke encryptie, waarom de encryptie, waarom niet de andere encryptie, hoe je het hebt geïmplementeerd en een voorbeeld.
+        </p></td>
+      <td><p><a href="/implementatie#encryptie">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>8.</p></td>
+      <td ><p>Leer de basis van RSA public cryptography. Maak een document/link naar cryptografie en bestudeer dit en documenteer de vindingen.</p></td>
+      <td><p><a href="/rsa">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>9.</p></td>
+      <td><p> Voeg security logging toe aan de applicatie, implementatie en tests.      </p></td>
+      <td><p><a href="/implementatie#logging">Resultaat</a></p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>10. </p></td>
+      <td><p>Maak gebruik van een static code review analysis tool </p></td>
+      <td><p><a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>11. </p></td>
+      <td><p>
+        Bestudeer de code van een open source app. Voeg hierop static code analyse als handmatige analyse.
+         </p></td>
+      <td><p><a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>12. </p></td>
+      <td><p>Bestudeer een veilige omgeving (server environment bijvoorbeeld) en rapporteer wat je hebt gevonden. </p></td>
+      <td><p>Niet gedaan. </p></td>
+    </tr>
+    
+    <tr>
+      <td class="tableNumber"><p>13. </p></td>
+      <td><p>Voeg fuzzing testen toe voor een applicatie die jij aan het ontwikkelen bent, bijvoorbeeld unit testen. Doe dit vooral met de focus op buffer overflow en 'Denial of Service' problemen </p></td>
+      <td><p>Gedeeltelijk gedaan. Heb niet de tijd gehad om het erin te implementeren maar heb wel onderzoek ernaar gedaan.<a href="/fuzzy">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>14. </p></td>
+      <td><p>Apply all security by design steps and techniques in your R&D project:<br>
+         gatder and discuss security requirements
+        , define security tdreats for tde system to develop and perform a risk analysis.
+        , put tde tdreats in a secure design tdrough misuse cases.
+        , work out security controls to limit tde tdreats in your misuse cases
+        , implement tde security controls
+        , test tde security controls by developing test cases for tde tdreats. Add fuzzing tests
+         </p></td>
+      <td><p><a href="/analyse">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>15. </p></td>
+      <td><p>Pick an IT application or service to develop to be able to learn and apply all security engineering aspects. Pick an application tdat needs security and tdat could be an actual operational environment, e.g. a CTF platform, an information system for a SOC, a web platform tdats stores sensitive or confidential data, etc. Give a general description of tde application in your portfolio: main functionality, users and user groups, global system architecture.
+        Install one or more server in your personal seclab account for development and testing of tdis very secure application. tdis server environment will be used for tde Red Team - Blue Team event where tde security of your application is tested (Red Team) and monitored (Blue Team).
+         </p></td>
+      <td><p><a href="/analyse">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>16. </p></td>
+      <td><p>Bestudeer database beveiliging       </p></td>
+      <td><p><a href="/implementatie#data">Resultaat</a> </p></td>
+    </tr>
+  </table>
+   <p>Red Team Vs Blue </p>
+    <table>
+    <tr>
+      <td class="tableNumber"><p>1. </p></td>
+      <td><p>Maak voor week 8 een applicatie die kan worden gebruikt voor het event. </p></td>
+      <td><p>Gelukt </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>2. </p></td>
+      <td><p>Noteer feedback en fix bugs die zijn gevonden bij de applicatie </p></td>
+      <td><p><a routerLink="/redblue1"> event 1 </a> en <a routerLink="/redblue2"> event 2 </a> </p></td>
+    </tr>
+  </table>
+ <p>Persoonlijke ontwikkeling</p>
+ <table style="width: 100%;">
+  <tr>
+    <td><p>1.</p></td>
+    <td><p>Persoonlijke ontwikkeling Oktober</p></td>
+    <td><p><a href="/ontwikkeling1">Resultaat</a></td>
+  </tr>
+  <tr>
+  <td><p>2.</p></td>
+  <td><p>Persoonlijke ontwikkeling Januari</p></td>
+  <td><p><a href="/ontwikkeling2">Not yet implemented</a></p></td>
+</tr>
+</table>
+  <p>Onderzoek van interesses in verband met security engineering</p>
+  <table>
+    <tr>
+      <td class="tableNumber"><p>1. </p></td>
+      <td><p> Onderzoek fuzzy tests. </p></td>
+      <td><p><a routerLink="/fuzzy">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>2. </p></td>
+      <td><p>Onderzoek logging. </p></td>
+      <td><p> </p><a routerLink="/logging">Resultaat</a></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>3. </p></td>
+      <td><p>Onderzoek XSS. </p></td>
+      <td><p><a routerLink="/xss">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>4. </p></td>
+      <td><p>Implementeer het CAPTCHA mechanisme. </p></td>
+      <td><p> </p><a href="/implementatie#captcha">Resultaat</a></td>
+    </tr>
+   
+  </table>
 </div>
+</body>
